--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ img{
    width:100vw;
 }
     </style>
-    <title>Document</title>  //write your website title
+    <title>Document</title>  
 </head>
 <body>
-    <img src = "Document.png" alt = "">  //write your filename
+    <img src = "Document.png" alt = "">  
 </body>
 </html>
